--- a/editor/package.json
+++ b/editor/package.json
@@ -1,7 +1,13 @@
 {
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "crypto": "^1.0.1",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-session": "^1.18.1",
     "mustache": "^4.2.0",
-    "openai": "^4.84.0"
+    "openai": "^4.84.0",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0"
   }
 }
